# something_project

backend/some_api/: .gitignore  README.md  pyproject.toml
backend/some_api/apps/: lotto_app.py  main.py  resolution_app.py
backend/some_api/db/: models.py
backend/some_api/scripts/: connect_docker_postgresql.sh  create_database.sh  fastapi_postgresql.sh
backend/something_site/: .gitignore  README.md  main.py  manage.py  pyproject.toml
backend/something_site/some_api/: random_extract_lotto_number.py  urls.py  views.py
backend/something_site/something_site/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/router/: index.ts
