[tool.poetry]
name = "some-api"
version = "0.1.0"
description = ""
authors = ["bcd-leejichan <jiclee@cuneo.co.kr>"]
readme = "README.md"
packages = [{include = "some_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
hypercorn = "^0.14.3"
uvicorn = "^0.20.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
